fixed some warnings